# VISION

./: .dockerignore  .env.template  .gitignore  Dockerfile  alembic.ini  deploy.sh  docker-compose.prod.yml  docker-compose.yml  init-db.sh  pyproject.toml  railway-beat.toml  railway-worker.toml  railway.toml  setup-env.sh  setup-ssl.sh  start.sh
.claude/: launch.json
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_simulator_tables.py  fbfec7b09376_initial_schema.py
backend/app/: config.py  database.py  logging_config.py  main.py  seed.py  tasks.py
backend/app/api/: deps.py  websocket.py
backend/app/core/: ai_brief.py  market_narrator.py
backend/app/data/: alpha_vantage.py  base.py  binance_adapter.py  btc_onchain_adapter.py  calendar_adapter.py  coinglass_adapter.py  correlation_adapter.py  cot_adapter.py  cryptocompare_adapter.py  etherscan_adapter.py  goldapi_adapter.py  ingestion.py  macro_adapter.py  massive_adapter.py  myfxbook_adapter.py  oanda_adapter.py  redis_pubsub.py  registry.py  sentiment_adapter.py
backend/app/models/: __init__.py  alert.py  asset.py  cot_report.py  daily_journal.py  indicator.py  learning_state.py  ohlcv.py  onchain_event.py  payment.py  signal.py  trade.py  user.py  (+1 more)
backend/tests/: conftest.py
config/assets/: commodities.yaml  crypto.yaml  forex.yaml  indices.yaml
data/cache/: central_bank_gold.json  macro_gold_summary.json
docs/: api-keys-guide.md  architecture.md  roadmap.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
nginx/: nginx.conf
nginx/conf.d/: default.conf
(+179 files in other folders)
